# Stream

./: .bumpversion.toml  .dockerignore  .gitignore  Dockerfile  Jenkinsfile  Makefile  README  README.md  a.py  a.txt  pyproject.toml  pytest.ini  requirement.txt  requirements.txt  setup.py  tmp.sh  tox.ini  utils.py
.github/workflows/: python-package.yml
configuration/: constants.py  logger.py
docs/: index.html  search.js  streamAPI.html
docs/streamAPI/: stream.html  testHelper.html  utility.html
docs/streamAPI/stream/: TO.html  decos.html  exception.html  optional.html  parallelStream.html  stream.html  streamHelper.html
docs/streamAPI/stream/TO/: TerminalOperations.html
docs/streamAPI/utility/: Types.html  utils.html
exp/effective_python/: inheriting_named_tuple.py
requirements/: requirements.txt  test-requirements.txt
script/: hello_world.py  usingPandas.py
src/streamAPI/: __init__.py  testHelper.py
src/streamAPI/stream/: exception.py  parallelStream.py  stream.py
src/streamAPI/stream/TO/: __init__.py
src/streamAPI/utility/: logger.py  utils.py
stream/: __init__.py  decos.py  exception.py  parallelStream.py  stream.py
streamAPI/: __init__.py
streamAPI/stream/: TerminalOperations.py  __init__.py  decos.py  exception.py  optional.py  parallelStream.py  stream.py  streamHelper.py
streamAPI/stream/TO/: TerminalOperations.py
streamAPI/test/: stream_test.py  testHelper.py
streamAPI/test/stream/optional/: optional.py
streamAPI/test/stream/stream/: accumulate_test.py  exclude_test.py  group_by_test.py  map_test.py  sort_test.py  stream_test.py  sum_test.py  window_func_test.py  window_test.py
streamAPI/test/stream/stream/TO/: TerminalOperations_test.py
streamAPI/test/stream/streamHelper/: conditional_test.py
streamAPI/test/stream_testing/: conditional_test.py  stream_test.py
streamAPI/test/utility/: chunk_test.py  comparator_test.py  utils_test.py
streamAPI/utility/: Types.py  __init__.py  logger.py  utils.py
sub-mod/configuration/: __init__.py  logger.py
sub-mod/utility/: class_utils.py
test/: stream_test.py  utils_test.py
test/stream/stream/: accumulate_test.py  map_test.py  sort_test.py  stream_test.py  window_func_test.py
test/stream/stream/TO/: TerminalOperations_test.py
test/utility/: chunk_test.py  comparator_test.py  utils_test.py
utility/: __init__.py  _utils.py  class_utils.py  concurrent_utils.py  db.py  factorial.py  logger.py  simple_utils.py  stream.py  utils.py
